# ChangeLog for dev-ruby/dm-types
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dm-types-1.2.2 (29 Oct 2013)

  29 Oct 2013; Peter Wilmott <p@p8952.info> +dm-types-1.2.2.ebuild,
  +metadata.xml:
  dev-ruby/dm-types: Initial commit, dependency for datamapper(dm)-1.2.x